--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -66,6 +66,7 @@
             padding: 0;
 
             &--icons {
+                grid-template-columns: repeat(2, 1fr);
                 opacity: 0;
             }
         }
