--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,6 +60,7 @@ a {
     --clr-primary: #fff;
     --clr-secondary: #000;
     --clr-cursor-bg: #fff;
+    --clr-perm-dark: #000;
 }
 
 .dark-mode {
